Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB


    Private Class BTIEBR_64
        Public Declare Function BTIEBR_BCConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_BCConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCConfigEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCConfigEx" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCConfigMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_BCConfigMsg" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCCreateList Lib "BTIEBR64.DLL" Alias "BTIEBR_BCCreateList" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCCreateMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_BCCreateMsg" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_BCPause Lib "BTIEBR64.DLL" Alias "BTIEBR_BCPause" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_BCPauseCheck Lib "BTIEBR64.DLL" Alias "BTIEBR_BCPauseCheck" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_BCResume Lib "BTIEBR64.DLL" Alias "BTIEBR_BCResume" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_BCSchedAgain Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedAgain" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedBranch Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedBranch" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedBranchUpdate Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedBranchUpdate" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedBuild Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedBuild" (ByVal nummsgs As UInt16, ByVal msgaddr As UInt32(), ByVal freq As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedCall Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedCall" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedCallUpdate Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedCallUpdate" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedEntry Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedEntry" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedFrame Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedFrame" (ByVal timeval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedFrameEnd Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedFrameEnd" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedFrameStart Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedFrameStart" (ByVal timeval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedGap Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedGap" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedHalt Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedHalt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedLog Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedLog" (ByVal condition As UInt32, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedMsg" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedPause Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedPause" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedPulse Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedPulse" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedPulse0 Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedPulse0" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedPulse1 Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedPulse1" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedRestart Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedRestart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedRetry Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedRetry" (ByVal condition As UInt32, ByVal retries As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedReturn Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedReturn" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSetDefaultGap Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSetDefaultGap" (ByVal gapval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSetTimeout Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSetTimeout" (ByVal timeoutval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSyncDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTransmitMsg" (ByRef xmitfieldsval As XMITFIELDSEBR, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTriggerDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChGetInfo Lib "BTIEBR64.DLL" Alias "BTIEBR_ChGetInfo" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ChIsBM Lib "BTIEBR64.DLL" Alias "BTIEBR_ChIsBM" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChIsEBR Lib "BTIEBR64.DLL" Alias "BTIEBR_ChIsEBR" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChIsM Lib "BTIEBR64.DLL" Alias "BTIEBR_ChIsM" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChIsS Lib "BTIEBR64.DLL" Alias "BTIEBR_ChIsS" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChStart Lib "BTIEBR64.DLL" Alias "BTIEBR_ChStart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChStop Lib "BTIEBR64.DLL" Alias "BTIEBR_ChStop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdMaxLoopRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdMaxLoopRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdMaxLoopWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdMaxLoopWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdShotRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdShotRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdShotWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdShotWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdSkipRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdSkipRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdSkipWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdSkipWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdStepRd Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdStepRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdStepWr Lib "BTIEBR64.DLL" Alias "BTIEBR_CmdStepWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorCtrl Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorCtrl" (ByVal ctrlval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorDefine" (ByVal defineval As UInt32, ByVal errvalue As UInt16, ByVal countval As Int32, ByVal wordpos As UInt16, ByVal bitpos As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorSent Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorSent" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorTagBC Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorTagBC" (ByVal tagval As Int32, ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorTagRT Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorTagRT" (ByVal tagval As Int32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorTriggerDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_ErrorTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListBlockRd Lib "BTIEBR64.DLL" Alias "BTIEBR_ListBlockRd" (ByVal buf As UInt16(), ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListBlockWr Lib "BTIEBR64.DLL" Alias "BTIEBR_ListBlockWr" (ByVal buf As UInt16(), ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListDataRd Lib "BTIEBR64.DLL" Alias "BTIEBR_ListDataRd" (ByVal buf As UInt16(), ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListDataWr Lib "BTIEBR64.DLL" Alias "BTIEBR_ListDataWr" (ByVal buf As UInt16(), ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListMultiBlockRd Lib "BTIEBR64.DLL" Alias "BTIEBR_ListMultiBlockRd" (ByVal buf As UInt16(), ByRef blkcountptr As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListMultiBlockWr Lib "BTIEBR64.DLL" Alias "BTIEBR_ListMultiBlockWr" (ByVal buf As UInt16(), ByVal blkcount As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MonConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_MonConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
